[package]
name = "tx-latency"
version = "0.1.0"
edition = "2024"
description = "Transaction latency measurement tool for EVM blockchains"

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0"
chrono = "0.4"
hex = "0.4.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }